[BE] fix: security 메서드 허용 권한 수정